Fix: Compile / Chore: Add more integration configs